# tako

./: .gitignore  Cargo.toml  README.md
examples/grpc-unary/: Cargo.toml
examples/grpc-unary/src/: main.rs
examples/hello-world-compio/src/: main.rs
examples/hello-world-http3/: Cargo.toml
examples/hello-world-http3/src/: main.rs
examples/http3-sse/: Cargo.toml
examples/http3-sse/src/: client.rs  main.rs
examples/job-queue/: Cargo.toml
examples/job-queue/src/: main.rs
examples/metrics-opentelemetry/: Cargo.toml
examples/metrics-opentelemetry/src/: main.rs
examples/openapi-utoipa/src/: main.rs
examples/openapi/src/: main.rs
examples/proxy-protocol/: Cargo.toml
examples/proxy-protocol/src/: main.rs
examples/streams-compio/src/: main.rs
examples/tcp-echo/: Cargo.toml
examples/tcp-echo/src/: main.rs
examples/tls-compio/src/: main.rs
examples/udp-echo/: Cargo.toml
examples/udp-echo/src/: main.rs
examples/unix-socket/: Cargo.toml
examples/unix-socket/src/: main.rs
examples/upload-progress/: Cargo.toml
examples/upload-progress/src/: main.rs
examples/websocket-compio/: Cargo.toml
examples/websocket-compio/src/: main.rs
examples/webtransport/: Cargo.toml
examples/webtransport/src/: main.rs
src/: body.rs  config.rs  extractors.rs  file_stream.rs  graphql.rs  grpc.rs  lib.rs  middleware.rs  openapi.rs  proxy_protocol.rs  queue.rs  redirect.rs  route.rs  router.rs  server.rs  server_compio.rs  server_h3.rs  server_tcp.rs  server_tls.rs  server_tls_compio.rs  server_udp.rs  server_unix.rs  signals.rs  sse.rs  static.rs  webtransport.rs  ws.rs  ws_compio.rs
src/extractors/: accept.rs  bearer.rs  form.rs  json.rs  params.rs  query.rs  simdjson.rs
src/middleware/: api_key_auth.rs  body_limit.rs  csrf.rs  request_id.rs  security_headers.rs  session.rs  upload_progress.rs
src/openapi/: ui.rs  utoipa.rs  vespera.rs
src/plugins/: compression.rs  cors.rs  idempotency.rs  metrics.rs  rate_limiter.rs
tests/: extractors.rs  middleware.rs  queue.rs  responder.rs  router.rs  sse_redirect_config.rs  udp_tcp_progress.rs
