[package]
name = "tako-rs"
version = "0.7.2"
edition = "2024"
description = "Tako is a lightweight async web framework for Rust."
license = "MIT"
repository = "https://github.com/rust-dd/tako"
authors = ["Daniel Boros <dancixx@gmail.com>"]
keywords = ["web", "framework", "async", "http"]
readme = "README.md"
documentation = "https://docs.rs/tako-rs"
homepage = "https://github.com/rust-dd/tako"

[dependencies]
ahash = { version = "0.8.12", features = ["serde"], optional = true }
anyhow = "1.0.98"
async-graphql = { version = "7.0.17", optional = true }
async-trait = "0.1.88"
base64 = "0.22.1"
brotli = { version = "8.0.1", optional = true }
bytes = "1.10.1"
compio = { version = "0.17.0", features = ["macros", "rustls"], optional = true }
compio-ws = { version = "0.2.0", optional = true }
compio-io = { version = "0.8.4", optional = true }
compio-buf = { version = "0.7.1", optional = true }
cookie = { version = "0.18.1", features = ["private", "signed"] }
cyper-core = { version = "0.7.0", optional = true }
flate2 = { version = "1.1.2", optional = true }
futures-util = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
matchit = "0.9.1"
mime = "0.3.17"
mime_guess = "2.0.5"
multer = { version = "3.1.0", optional = true }
once_cell = "1.21.3"
parking_lot = "0.12.5"
pin-project-lite = "0.2.16"
prost = { version = "0.14.1", optional = true }
rustls = { version = "0.23.28", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
sha1 = "0.10.6"
simd-json = { version = "0.15.1", optional = true }
prometheus = { version = "0.13.4", optional = true }
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31.0", features = ["metrics", "http-proto"], optional = true }
scc = "3.4.8"
sonic-rs = { version = "0.5.6", optional = true }
tikv-jemallocator = { version = "0.6.0", optional = true }
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = { version = "0.26.2", optional = true }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.27.0"
tokio-util = { version = "0.7.15", features = ["compat"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true }
url = "2.5.4"
urlencoding = "2.1.3"
utoipa = { version = "5.4", optional = true }
uuid = { version = "1.17.0", optional = true, features = ["v4"] }
vespera_core = { version = "0.1", optional = true }
webpki-roots = { version = "1.0.1", optional = true }
zstd = { version = "0.13.3", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
quinn = { version = "0.11.9", optional = true }

[target.'cfg(target_os = "freebsd")'.dependencies]
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"] }

[target.'cfg(not(target_os = "freebsd"))'.dependencies]
jwt-simple = { version = "0.12.12" }

[features]
async-graphql = ["dep:async-graphql"]
compio = ["dep:compio", "dep:cyper-core"]
compio-tls = ["compio", "tls", "dep:rustls", "dep:rustls-pemfile"]
compio-ws = ["compio", "dep:compio-ws", "dep:compio-io", "dep:compio-buf"]
metrics-prometheus = ["dep:prometheus", "plugins", "signals"]
metrics-opentelemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "plugins", "signals"]
graphiql = ["dep:async-graphql", "async-graphql/graphiql"]
client = ["dep:tokio-rustls", "dep:rustls", "dep:webpki-roots"]
default = []
file-stream = []
http2 = []
jemalloc = ["dep:tikv-jemallocator"]
multipart = ["dep:multer", "dep:uuid"]
plugins = ["dep:brotli", "dep:flate2"]
protobuf = ["dep:prost"]
signals = []
simd = ["dep:simd-json", "dep:sonic-rs", "jemalloc"]
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]
http3 = ["dep:h3", "dep:h3-quinn", "dep:quinn", "dep:rustls", "dep:rustls-pemfile"]
ahash = ["dep:ahash"]
tako-tracing = ["dep:tracing-subscriber"]
utoipa = ["dep:utoipa"]
utoipa-yaml = ["utoipa", "utoipa/yaml"]
vespera = ["dep:vespera_core"]
zero-copy-extractors = []
zstd = ["dep:zstd", "plugins"]

[lib]
name = "tako"
path = "src/lib.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "auth"
path = "examples/auth/src/main.rs"

[[example]]
name = "file-stream"
path = "examples/file-stream/src/main.rs"
required-features = ["file-stream"]

[[example]]
name = "health"
path = "examples/health/src/main.rs"

[[example]]
name = "hello-world"
path = "examples/hello-world/src/main.rs"

[[example]]
name = "hello-world-compio"
path = "examples/hello-world-compio/src/main.rs"
required-features = ["compio"]

[[example]]
name = "hello-world-http3"
path = "examples/hello-world-http3/src/main.rs"
required-features = ["http3"]

[[example]]
name = "http3-sse"
path = "examples/http3-sse/src/main.rs"
required-features = ["http3"]

[[example]]
name = "multipart"
path = "examples/multipart/src/main.rs"
required-features = ["multipart"]

[[example]]
name = "stream-compression"
path = "examples/stream-compression/src/main.rs"
required-features = ["plugins"]

[[example]]
name = "streams"
path = "examples/streams/src/main.rs"

[[example]]
name = "websocket"
path = "examples/websocket/src/main.rs"

[[example]]
name = "websocket-http2"
path = "examples/websocket-http2/src/main.rs"
required-features = ["http2", "tls"]

[[example]]
name = "websocket-compio"
path = "examples/websocket-compio/src/main.rs"
required-features = ["compio-ws"]

[[example]]
name = "with-state"
path = "examples/with-state/src/main.rs"

[[example]]
name = "extractors-multi"
path = "examples/extractors-multi/src/main.rs"

[[example]]
name = "graphql"
path = "examples/graphql/src/main.rs"
required-features = ["async-graphql"]

[[example]]
name = "graphql-generic-ws"
path = "examples/graphql-generic-ws/src/main.rs"
required-features = ["async-graphql"]

[[example]]
name = "signals-basic"
path = "examples/signals-basic/src/main.rs"
required-features = ["signals"]

[[example]]
name = "signals-rpc"
path = "examples/signals-rpc/src/main.rs"
required-features = ["signals"]

[[example]]
name = "signals-route"
path = "examples/signals-route/src/main.rs"
required-features = ["signals"]

[[example]]
name = "signals-complex"
path = "examples/signals-complex/src/main.rs"
required-features = ["signals"]

[[example]]
name = "signals-advanced"
path = "examples/signals-advanced/src/main.rs"
required-features = ["signals"]

[[example]]
name = "json-header-map"
path = "examples/json-header-map/src/main.rs"

[[example]]
name = "openapi"
path = "examples/openapi/src/main.rs"
required-features = ["vespera"]

[[example]]
name = "openapi-utoipa"
path = "examples/openapi-utoipa/src/main.rs"
required-features = ["utoipa"]

[[example]]
name = "metrics-opentelemetry"
path = "examples/metrics-opentelemetry/src/main.rs"
required-features = ["metrics-opentelemetry"]
