[package]
name = "http3-sse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
futures-util = "0.3.31"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.3.1"
quinn = "0.11.9"
rustls = "0.23.28"
tako-rs = { path = "../..", features = ["http3"] }
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
